--- a/po/wesnoth-dm/lt.po
+++ b/po/wesnoth-dm/lt.po
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n"
-"%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #. [editor_group]: id=dm
@@ -419,15 +419,11 @@ msgstr "Ne! Metorai... Nemirk!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Įsimink mano paskutinius žodžius, Delfadorai! Keliauk į šiaurės rytus, į "
+"Įsimink mano paskutinius žodžius, Delfadorai! Keliauk į šiaurės vakarus, į "
 "Veldyną ir ieškok ten mano draugo Leolyno. Jis tau padės."
 
 #. [message]: speaker=Methor
@@ -953,9 +949,8 @@ msgstr "Kur jis prapuolė?"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:174
-#, fuzzy
 msgid "Haw haw haw! Fools!"
-msgstr "Ha ha ha! Nevykėliai!"
+msgstr "Ha ha ha! Kvailiai!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:178
@@ -2804,9 +2799,8 @@ msgstr "Trgrau"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
 msgid "Death of Garard II"
-msgstr "Garardo mirtis"
+msgstr "Garardo II mirtis"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
