--- a/po/wesnoth-l/lt.po
+++ b/po/wesnoth-l/lt.po
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n"
-"%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -1607,16 +1607,14 @@ msgstr "Garbė"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:25
-#, fuzzy
 msgid ""
 "In the Year of Wesnoth 161, the newly crowned king sought to tame the "
 "wildlands that separated the human cities surrounding Weldyn and the coastal "
 "regions of Elensefar once and for all."
 msgstr ""
-"161-aisiais Vesnoto metais, 338 metai iki Aševierės išdavystės, naujai "
-"karūnuotasis karalius susiruošė kartą ir visiems laikams saugiomis paversti "
-"dykas žemes, skiriančias žmonių miestus aplink Veldyną, ir Elensefaro "
-"pakrantės valdas."
+"161-aisiais Vesnoto metais naujai karūnuotasis karalius susiruošė kartą ir "
+"visiems laikams saugiomis paversti dykas žemes, skiriančias žmonių miestus "
+"aplink Veldyną, ir Elensefaro pakrantės valdas."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:28
