--- a/po/wesnoth-nr/lt.po
+++ b/po/wesnoth-nr/lt.po
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n"
-"%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -2518,7 +2518,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1630
-#, fuzzy
 msgid ""
 "Well, if you don’t mind me saying — that certainly isn’t the state of "
 "affairs now. Knalga lies in ruins, orcs ravage the surface, and these dark "
@@ -2562,9 +2561,8 @@ msgstr ""
 
 #. [option]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1674
-#, fuzzy
 msgid "rod of justice^Take it"
-msgstr "teisingumo lazda"
+msgstr "Paimti"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1678
@@ -2638,9 +2636,8 @@ msgstr "teisingumo lazda"
 
 #. [option]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1798
-#, fuzzy
 msgid "rod of justice^Leave it"
-msgstr "teisingumo lazda"
+msgstr "Palikti"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1824
@@ -2853,9 +2850,8 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2176
-#, fuzzy
 msgid "Uh... 534..."
-msgstr "Ėėė... gerai..."
+msgstr "Uu... 534..."
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2180
@@ -5572,7 +5568,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:99
-#, fuzzy
 msgid ""
 "Well, that certainly isn’t the state of affairs now. Knalga lies in ruins, "
 "orcs ravish the surface, and dark and evil creatures haunt the underground "
