--- a/po/wesnoth-sotbe/lt.po
+++ b/po/wesnoth-sotbe/lt.po
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n"
-"%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -2665,9 +2665,8 @@ msgstr "Flar’Taro mirtis"
 
 #. [side]: type=General, id=Arthain
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:83
-#, fuzzy
 msgid "Arthain"
-msgstr "Artūras"
+msgstr "Artainas"
 
 #. [side]: type=Lieutenant, id=Hanak
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:103
@@ -2927,9 +2926,8 @@ msgstr ""
 
 #. [side]: type=General, id=Fredor
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:153
-#, fuzzy
 msgid "Fredor"
-msgstr "Fredrikas"
+msgstr "Fredoras"
 
 #. [side]: type=General, id=Georan
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:170
