--- a/po/wesnoth-units/lt.po
+++ b/po/wesnoth-units/lt.po
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n"
-"%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
@@ -3317,9 +3317,8 @@ msgstr "Baisiojo vilko jojikas"
 
 #. [unit_type]: id=Great Wolf, race=wolf
 #: data/core/units/monsters/Wolf_Great.cfg:4
-#, fuzzy
 msgid "Great Wolf"
-msgstr "Didysis trolis"
+msgstr "Didysis vilkas"
 
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
@@ -4395,16 +4394,3 @@ msgid ""
 "Woses are utterly unwarlike, but possess a great strength. They are, "
 "however, neither used to, nor quick at moving around."
 msgstr ""
-
-#~ msgid "long sword"
-#~ msgstr "ilgas kalavijas"
-
-#~ msgid "Elder Falcon"
-#~ msgstr "Vyresnysis sakalas"
-
-#~ msgid "Falcon"
-#~ msgstr "Sakalas"
-
-#, fuzzy
-#~ msgid "fire arrow"
-#~ msgstr "ugniniai nagai"
